[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=2]
[ext_resource path="res://assets/art/ui/musicOff.png" type="Texture" id=3]
[ext_resource path="res://assets/art/ui/musicOn.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=2]
action = "ui_select"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -162.0
margin_bottom = -84.0
custom_fonts/font = SubResource( 1 )
text = "Dodge the foxes!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -200.0
margin_right = 90.0
custom_fonts/font = SubResource( 1 )
shortcut = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MuteButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -50.0
margin_bottom = 50.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyOption" type="OptionButton" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 370.0
margin_top = 148.0
margin_right = -359.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 4 )
text = "Choose difficulty"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -42.0
margin_right = 180.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 1 )
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="toggled" from="MuteButton" to="." method="_on_MuteAudio_toggled"]
[connection signal="item_selected" from="DifficultyOption" to="." method="_on_DifficultyOption_item_selected"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
